[package]
name = "tournament"
version = "0.0.0"
edition = "2021"
authors = ["Kia Strawberries"]
description = "Tournament-Handling API"
readme = "README.md"
repository = "https://github.com/uwukia/tournament"
license = "MIT OR Apache-2.0"
keywords = ["match", "tourney", "bracket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
